fixed logo from stretching

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -141,7 +141,7 @@ footer{
 
   #logo {
     height: 1.5rem;
-    max-width: 2.278rem;
+    min-width: 2.278rem;
     margin: 0 1rem 0 0.5rem;
   }
 
@@ -182,6 +182,10 @@ footer{
     width: 100%;
     min-width: 470px;
     margin: 0 auto;
+  }
+
+  #logo{
+    max-width: 2.278rem;
   }
 
   .banner{
